full task 1 from matsata

--- a/matstat/task_1/shigin.ipynb
+++ b/matstat/task_1/shigin.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -210,6 +217,91 @@
    "metadata": {},
    "source": [
     "```Вывод:``` Метод моментов - ассимптотически нормальная оцнка, а метод максимума правдоподобия - нет (хотя вроде как должна быть)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# II."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$f_\\theta(x) = e^{\\theta - x}I_{x>\\theta} \\Rightarrow F_\\theta(x) = 1-e^{\\theta-x}I_{x>\\theta} \\Rightarrow F^{-1}_\\theta(u) = \\theta - \\ln{(1-u)}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 100\n",
+    "theta = 1.8\n",
+    "\n",
+    "u = np.random.uniform(0,1,N)\n",
+    "x = theta - np.log(1-u)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для $X\\sim f_\\theta(x) = e^{\\theta - x}I_{x>\\theta} $ метод моментов дает:\n",
+    "$$EX = \\int_\\theta^\\infty x\\cdot e^{\\theta-x}dx = \\theta + 1 = \\overline{X}$$\n",
+    "$$\\Rightarrow \\theta = \\overline{X}-1$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.917502263334252"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_mm = x.mean() - 1\n",
+    "theta_mm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для $X\\sim f_\\theta(x) = e^{\\theta - x}I_{x>\\theta} $ метод максимума правдоподобия дает:\n",
+    "$$ L = e^{n\\theta - \\sum x_i} I_{x_1>\\theta}\\ldots I_{x_n>\\theta} = e^{n\\cdot\\left(\\theta - \\overline{x}\\right)}I_{x_{(1)}>\\theta}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8043992547852006"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.min()"
    ]
   },
   {
